Updated for latest Vapour version and changed dashboard

--- a/lua/vapour/user-config/init.lua.example
+++ b/lua/vapour/user-config/init.lua.example
@@ -1,16 +1,14 @@
 Vapour.plugins.packer = {
-  init = {
-    display = {
-      open_fn = function()
-        return Vapour.utils.plugins.require_if_installed('packer.util').float { border = "single" }
-      end
-    },
-  },
+    init = {
+        display = {
+            open_fn = function()
+                return Vapour.utils.plugins.require('packer.util').float {border = "single"}
+            end
+        }
+    }
 }
 
-Vapour.plugins.user = {
-  {"rcarriga/nvim-dap-ui", requires = {"mfussenegger/nvim-dap"}},
-}
+Vapour.plugins.user = {{"rcarriga/nvim-dap-ui", requires = {"mfussenegger/nvim-dap"}}}
 
 -- These assume either vapour/user-config/*/init.lua or vapour/user-config/*.lua
 Vapour.utils.plugins.require_if_installed('vapour.user-config.dap')
@@ -20,14 +18,16 @@ Vapour.utils.plugins.require_if_installed('vapour.user-config.autopairs')
 Vapour.utils.plugins.require_if_installed("which-key", "folke/which-key.nvim")
 
 -- To magic-load or add a missing package w/ packer config
-Vapour.utils.plugins.require_if_installed("which-key", folke/which-key.nvim", { config = function() end})
+Vapour.utils.plugins.require_if_installed("which-key", "folke/which-key.nvim", {
+    config = function()
+    end
+})
 
 -- To import a module w/o dealing with Packer
 Vapour.utils.plugins.require_if_installed("fs")
 
 -- Adding additional which key definitions (does not append to existing ones.
 -- Will throw an error if the root key ("D" here) is already defined in which-keys-config/init.lua
-Vapour.plugins.which_key.user_defined.D = {
-    name = "DAP Debugger",
-    b = {":lua require'dap'.toggle_breakpoint()<CR>", "Toggle Breakpoint"},
-}
+Vapour.plugins.which_key.user_defined.D = {name = "DAP Debugger", b = {":lua require'dap'.toggle_breakpoint()<CR>", "Toggle Breakpoint"}}
+
+-- vim:ft=lua
